# python-postgresql-crud

./: db_setup.sql  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 8f34cce381b1_create_books_table.py  c1306957cec9_create_reviews_table.py
configs/: db_connection.py
entities/: __init__.py  book.py  review.py
operations/: __init__.py  delete.py  fetch.py  insert.py  update.py
operations/books/: delete.py  insert.py  update.py
operations/reviews/: __init__.py  insert.py  list.py
repositories/: __init__.py  book_repository.py  review_repository.py
src/: exceptions.py  main.py
src/api/: books.py  reviews.py
src/configs/: db_connection.py
src/entities/: __init__.py  book.py  review.py
src/operations/books/: delete.py  fetch.py  insert.py  update.py
src/operations/reviews/: insert.py  list.py
src/repositories/: __init__.py  book_repository.py  review_repository.py
src/schemas/: book.py  review.py
src/services/: book_service.py  review_service.py
tests/repositories/: test_book_repository.py  test_review_repository.py
tests/services/: test_book_service.py  test_review_service.py
