[project]
name = "python-postgresql-crud"
version = "1.0.0"
description = "A CRUD of books with python and postgresql (via psycopg2)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.136.3",
    "psycopg2-binary>=2.9.12",
    "pytest>=9.0.3",
    "sqlalchemy>=2.0.49",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
sources = ["src"]

[tool.uv]
package = false